# Generated by Django 5.2.6 on 2025-10-10 01:42

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Autor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
            ],
        ),
        migrations.CreateModel(
            name='TrabajoInvestigacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=255)),
                ('resumen', models.TextField()),
                ('fecha_publicacion', models.DateField()),
                ('archivo_ruta', models.FileField(blank=True, upload_to='trabajos/')),
                ('tipo_material', models.CharField(choices=[('articulo', 'Artículo'), ('tesis', 'Tesis'), ('libro', 'Libro')], max_length=50)),
                ('estado_validacion', models.CharField(choices=[('pendiente', 'Pendiente'), ('aprobado', 'Aprobado'), ('rechazado', 'Rechazado')], default='pendiente', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='PalabraClave',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('termino', models.CharField(max_length=100, unique=True)),
                ('categoria', models.CharField(blank=True, max_length=50)),
            ],
        ),
        migrations.CreateModel(
            name='Rol',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='AutorTrabajo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('orden', models.PositiveIntegerField(default=0)),
                ('autor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='biblioteca.autor')),
            ],
        ),
        migrations.CreateModel(
            name='Clasificacion',
            fields=[
                ('trabajo', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to='biblioteca.trabajoinvestigacion')),
                ('sistema', models.CharField(max_length=50)),
                ('signatura_topografica', models.CharField(max_length=100)),
                ('notas', models.TextField(blank=True, default='')),
            ],
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='autores',
            field=models.ManyToManyField(through='biblioteca.AutorTrabajo', to='biblioteca.autor'),
        ),
        migrations.AddField(
            model_name='autortrabajo',
            name='trabajo',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='biblioteca.trabajoinvestigacion'),
        ),
        migrations.CreateModel(
            name='HistorialVisualizacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_visualizacion', models.DateTimeField(default=django.utils.timezone.now)),
                ('trabajo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='biblioteca.trabajoinvestigacion')),
                ('usuario', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-fecha_visualizacion'],
            },
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='palabras_clave',
            field=models.ManyToManyField(to='biblioteca.palabraclave'),
        ),
        migrations.CreateModel(
            name='Perfil',
            fields=[
                ('usuario', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, primary_key=True, serialize=False, to=settings.AUTH_USER_MODEL)),
                ('rol', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='biblioteca.rol')),
            ],
        ),
        migrations.CreateModel(
            name='SolicitudPrestamo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo_solicitud', models.CharField(default='consulta', max_length=50)),
                ('fecha_solicitud', models.DateTimeField(auto_now_add=True)),
                ('estado', models.CharField(choices=[('pendiente', 'Pendiente'), ('aprobado', 'Aprobado'), ('rechazado', 'Rechazado')], default='pendiente', max_length=20)),
                ('trabajo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='biblioteca.trabajoinvestigacion')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
