# Generated by Django 5.2.6 on 2025-11-24 03:09

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('biblioteca', '0002_trabajoinvestigacion_thumbnail'),
    ]

    operations = [
        migrations.CreateModel(
            name='Convocatoria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('tipo', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
                ('requisitos', models.TextField(blank=True, null=True)),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('cerrado', 'Cerrado'), ('proximo', 'Próximo')], default='activo', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.AddField(
            model_name='clasificacion',
            name='codigo_cutter',
            field=models.CharField(blank=True, max_length=50, null=True),
        ),
        migrations.AddField(
            model_name='clasificacion',
            name='numero_dewey',
            field=models.CharField(blank=True, max_length=50, null=True),
        ),
        migrations.AddField(
            model_name='historialvisualizacion',
            name='ip_origen',
            field=models.GenericIPAddressField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='area_modulo',
            field=models.CharField(blank=True, max_length=100, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='carrera',
            field=models.CharField(blank=True, max_length=100, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='fuente_fisica',
            field=models.CharField(blank=True, max_length=255, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='institucion_empresa',
            field=models.CharField(blank=True, max_length=150, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='nivel_academico',
            field=models.CharField(blank=True, max_length=50, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='objetivo_general',
            field=models.TextField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='objetivos_especificos',
            field=models.TextField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='trabajoinvestigacion',
            name='tiene_archivo_digital',
            field=models.BooleanField(default=True),
        ),
        migrations.AlterField(
            model_name='clasificacion',
            name='sistema',
            field=models.CharField(default='Dewey', max_length=50),
        ),
        migrations.AlterField(
            model_name='solicitudprestamo',
            name='estado',
            field=models.CharField(choices=[('pendiente', 'Pendiente'), ('aprobado', 'Aprobado'), ('rechazado', 'Rechazado'), ('devuelto', 'Devuelto')], default='pendiente', max_length=20),
        ),
        migrations.AlterField(
            model_name='trabajoinvestigacion',
            name='archivo_ruta',
            field=models.FileField(blank=True, null=True, upload_to='trabajos/'),
        ),
        migrations.AlterField(
            model_name='trabajoinvestigacion',
            name='tipo_material',
            field=models.CharField(choices=[('articulo', 'Artículo'), ('tesis', 'Tesis'), ('libro', 'Libro'), ('proyecto', 'Proyecto de Grado')], max_length=50),
        ),
    ]
