@startuml
' MER academico de biblioteca virtual con soporte RAG

hide circle
hide methods
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam entity {
  BackgroundColor #FFFDF7
  BorderColor #6B7280
  FontColor #111827
}
skinparam note {
  BackgroundColor #F4F7FB
  BorderColor #94A3B8
}

title Modelo Entidad-Relacion de la Biblioteca Virtual

package "Catalogo bibliografico" {
  entity "Autor" as Autor {
    * id : bigint
    --
    nombre : varchar(100)
    apellido : varchar(100)
  }

  entity "PalabraClave" as PalabraClave {
    * id : bigint
    --
    termino : varchar(100) <<unique>>
    categoria : varchar(50)
  }

  entity "TrabajoInvestigacion" as TrabajoInvestigacion {
    * id : bigint
    --
    titulo : varchar(500)
    resumen : text
    contenido : text
    objetivo_general : text
    objetivos_especificos : text
    fecha_publicacion : date
    archivo_ruta : file
    thumbnail : image
    tipo_material : varchar(50)
    carrera : varchar(100)
    nivel_academico : varchar(50)
    institucion_empresa : varchar(150)
    area_modulo : varchar(100)
    tiene_archivo_digital : bool
    fuente_fisica : varchar(255)
    estado_validacion : varchar(20)
    created_at : datetime
    updated_at : datetime
    --
    asesor_id : fk -> Autor.id
  }

  note right of TrabajoInvestigacion
    Entidad central del repositorio academico.
    Reune la produccion intelectual,
    sus responsables, descriptores
    y clasificacion documental.
  end note

  entity "AutorTrabajo" as AutorTrabajo {
    * id : bigint
    --
    orden : int
    trabajo_id : fk -> TrabajoInvestigacion.id
    autor_id : fk -> Autor.id
    ..
    unique(trabajo_id, autor_id)
  }

  entity "Clasificacion" as Clasificacion {
    * trabajo_id : pk, fk -> TrabajoInvestigacion.id
    --
    sistema : varchar(50)
    numero_dewey : varchar(50)
    codigo_cutter : varchar(50)
    signatura_topografica : varchar(100)
    notas : text
  }

  entity "Libro" as Libro {
    * id : bigint
    --
    titulo : varchar(255)
    autor : varchar(255)
    isbn : varchar(20) <<unique>>
    editorial : varchar(100)
    anio_publicacion : int
    numero_edicion : smallint
    stock : int
    ubicacion_fisica : varchar(100)
    portada : image
  }
}

package "Usuarios y operaciones" {
  entity "auth_user\n(Django User)" as User {
    * id : bigint
    --
    username : varchar(150)
    email : varchar(254)
    password : varchar(128)
  }

  entity "Rol" as Rol {
    * id : bigint
    --
    nombre : varchar(50) <<unique>>
    descripcion : text
    puede_gestionar_usuarios : bool
    puede_eliminar_contenido : bool
    puede_ver_estadisticas : bool
    puede_aprobar_prestamos : bool
  }

  entity "Perfil" as Perfil {
    * usuario_id : pk, fk -> User.id
    --
    rol_id : fk -> Rol.id
  }

  entity "SolicitudPrestamo" as SolicitudPrestamo {
    * id : bigint
    --
    tipo_solicitud : varchar(50)
    fecha_solicitud : datetime
    estado : varchar(20)
    trabajo_id : fk -> TrabajoInvestigacion.id
    usuario_id : fk -> User.id
  }

  entity "HistorialVisualizacion" as HistorialVisualizacion {
    * id : bigint
    --
    fecha_visualizacion : datetime
    ip_origen : inet
    trabajo_id : fk -> TrabajoInvestigacion.id
    usuario_id : fk -> User.id <<nullable>>
  }
}

package "Convocatorias" {
  entity "Convocatoria" as Convocatoria {
    * id : bigint
    --
    titulo : varchar(200)
    tipo : varchar(50)
    descripcion : text
    requisitos : text
    fecha_inicio : date
    fecha_fin : date
    estado : varchar(20)
    created_at : datetime
  }
}

package "IA / RAG" {
  entity "ThesisEmbedding" as ThesisEmbedding {
    * id : bigint
    --
    embedding : vector[768] / float[768]
    embedding_model : varchar(100)
    indexed_text : text
    metadata : json
    created_at : datetime
    updated_at : datetime
    --
    trabajo_id : fk -> TrabajoInvestigacion.id <<unique>>
  }

  note right of ThesisEmbedding
    Representa la huella semantica
    de cada trabajo de investigacion.
    Sirve como base para la
    recuperacion aumentada por
    generacion dentro del modulo IA.
  end note

  note bottom of ThesisEmbedding
    Logica documental del RAG:
    1. localizar trabajos semanticamente cercanos
    2. recuperar sus metadatos y contenido indexado
    3. construir una respuesta apoyada en fuentes
  end note
}

' Relaciones principales del catalogo
Autor ||--o{ AutorTrabajo : participa
TrabajoInvestigacion ||--o{ AutorTrabajo : tiene
Autor ||--o{ TrabajoInvestigacion : asesora
TrabajoInvestigacion ||--|| Clasificacion : clasifica

' Many-to-many conceptuales
TrabajoInvestigacion }o--o{ PalabraClave : describe
Libro }o--o{ PalabraClave : etiqueta

' Operaciones y seguridad
Rol ||--o{ Perfil : asigna
User ||--|| Perfil : extiende
User ||--o{ SolicitudPrestamo : realiza
TrabajoInvestigacion ||--o{ SolicitudPrestamo : solicitado
User ||--o{ HistorialVisualizacion : visualiza
TrabajoInvestigacion ||--o{ HistorialVisualizacion : consultado

' RAG
TrabajoInvestigacion ||--|| ThesisEmbedding : indexa

legend right
  ||= one and only one
  |o= zero or one
  }o= zero or many
  }|= one or many

  Lectura academica del diagrama:
  - trabajo, autor y palabra clave organizan el conocimiento
  - clasificacion y operaciones apoyan la gestion bibliotecaria
  - thesisembedding modela la capa semantica del RAG
endlegend

@enduml
